# helpful-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  action.yaml  setup.cfg
hooks/: pretty_json.py
