[metadata]
name = data-science-core
version = 0.39.2
maintainer = Måns Bermell
maintainer_email = mans.bermell@leovegas.com
url = https://github.com/gutro/data-science-core

[options]
packages = find:
install_requires =
    google-auth>=1.24.0
    google-cloud-bigquery[bqstorage,pandas]>=2.6.1,<3.0.0
    google-cloud-storage>=1.35.0
    pandas>=1.1.5,<1.4.0

[options.entry_points]
console_scripts =
    pretty-json = hooks.pretty_json:main
